# python-boilerplate

./: .buildinfo  .bumpversion.cfg  .gitignore  .python-version  .readthedocs.yaml  Justfile  LICENSE  Makefile  README.rst  README_template.rst  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  rename-git-tags.sh  requirements.txt  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_modules/: index.html  python_project_boilerplate.html
docs/_build/_sources/: index.rst.txt
python_boilerplate/: __init__.py
python_boilerplate/cli_with_click/: multi_command_chaining.py  simple.py
python_project_boilerplate/: __init__.py  debug.py
src/python_boilerplate/: cli_with_fire.py
src/python_boilerplate/cli_with_click/: multi_command_chaining.py
src/python_boilerplate/templates/: template1.j2  template_with_jinja2.py
tests/: conftest.py  helper.py  test_mark.py  test_python_boilerplate.py  test_python_project_boilerplate.py  test_templates.py  test_tmp_path.py
typings/fire/: __init__.pyi  __main__.pyi  completion.pyi  core.pyi  decorators.pyi  docstrings.pyi  formatting.pyi  helptext.pyi  inspectutils.pyi  trace.pyi
typings/fire/console/: console_attr.pyi  console_io.pyi  console_pager.pyi  encoding.pyi  files.pyi  platforms.pyi  text.pyi
