[project]
name = "python_boilerplate"
version = "0.1.0"
description = "A collection of boilerplate files and templates for my Python projects."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Private :: Do not Upload",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Stubs Only",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fire>=0.5.0,<0.6",
    "click>=8.1.7,<9",
    "jinja2>=3.1.6",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/python-project-boilerplate"

[project.scripts]
"python-project-boilerplate.py" = "python_boilerplate:print_version"
"cli-with-fire.py" = "python_boilerplate.cli_with_fire:main"
"cli-with-click_simple.py" = "python_boilerplate.cli_with_click.simple:main"
"cli-with-click_multi-command-chaining.py" = "python_boilerplate.cli_with_click.multi_command_chaining:cli"

[dependency-groups]
dev = [
    "beautifulsoup4>=4,<5",
    "pytest>=8,<9",
    "mypy>=1,<2",
    "autopep8>=2,<3",
    "readme-patcher",
    "tox>=4,<5",
    "ruff>=0,<1",
    "pip-tools>=7,<8",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.12"}

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

# Single file, for example ./userdetect.py
# [tool.uv.build-backend]
# module-name = "userdetect"
# module-root = ""
# namespace = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.pyright]
reportPrivateImportUsage = "none"
reportUnusedExpression = "information"
reportUnusedImport = "information"
reportImportCycles = "information"
reportPrivateUsage = false
reportInvalidStringEscapeSequence = false

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
readme-patcher = { git = "https://github.com/Josef-Friedrich/readme_patcher.git", branch = "main" }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
