[project]
name = "python_boilerplate"
version = "0.1.0"
description = "A collection of boilerplate files and templates for my Python projects."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.12"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Private :: Do not Upload",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Stubs Only",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.3.1",
    "fire>=0.7.1",
    "jinja2>=3.1.6",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/python-project-boilerplate"

[project.scripts]
"python-project-boilerplate.py" = "python_boilerplate:print_version"
"cli-with-fire.py" = "python_boilerplate.cli_with_fire:main"
"cli-with-click_simple.py" = "python_boilerplate.cli_with_click.simple:main"
"cli-with-click_multi-command-chaining.py" = "python_boilerplate.cli_with_click.multi_command_chaining:cli"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

# Single file, for example ./userdetect.py
# [tool.uv.build-backend]
# module-name = "userdetect"
# module-root = ""
# namespace = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.pyright]
reportPrivateImportUsage = "none"
reportUnusedExpression = "information"
reportUnusedImport = "information"
reportImportCycles = "information"
reportPrivateUsage = false
reportInvalidStringEscapeSequence = false

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
